--- a/macos-hello/src/styles.css
+++ b/macos-hello/src/styles.css
@@ -12,7 +12,7 @@
   left: 0;
   margin: 0;
   padding: 0;
-  background-color: #ffffff52;
+  background-color: #ffffff30;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -35,4 +35,5 @@
   width: 300px;
   margin: 0;
   padding: 0;
+  filter: drop-shadow(3px 5px 2px rgb(0 0 0 / 0.1));
 }
